--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "components/font-awesome": "^5.4",
         "doctrine/annotations": "^1.6",
         "friendsofsymfony/ckeditor-bundle": "^1.2",
         "sensio/framework-extra-bundle": "^5.1",
@@ -23,7 +24,8 @@
         "symfony/twig-bundle": "*",
         "symfony/validator": "*",
         "symfony/web-link": "*",
-        "symfony/yaml": "*"
+        "symfony/yaml": "*",
+        "twbs/bootstrap": "^4.1"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
