--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "components/font-awesome": "^5.4",
         "doctrine/annotations": "^1.6",
         "friendsofsymfony/ckeditor-bundle": "^2.0",
+        "mediafigaro/google-analytics-api-symfony": "^1.22",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "*",
         "symfony/console": "*",
